5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1795_1595.log
== TEST (2019-05-30 16:16:04) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(nota==min(v)):
		mn=v[i]
	nota = nota + nota[i]
	i = i + 1 
print(round(nota-mn/size(v)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:21:01) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
0.46006
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:04) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	
print(round(nota-mn/size(v)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:23:32) 
-- CODE:
from numpy import * 
v=array(eval(float(input("vetor:"))))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
0.409916
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 2, in <module>
    v=array(eval(float(input())))
ValueError: could not convert string to float: '[1,0,3]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:33) 
-- CODE:
from numpy import * 
v=array(eval(float(input("vetor:"))))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	
print(round(nota-mn/size(v)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:23:33) 
-- CODE:
from numpy import * 
v=array(eval(float(input("vetor:"))))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
0.332053
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 2, in <module>
    v=array(eval(float(input())))
ValueError: could not convert string to float: '[1,0,3]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:24:25) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
0.459913
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:24:26) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
0.36558
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:24:54) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
0.398463
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:24:59) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
0.369168
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:25:02) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
1.66386
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:25:03) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
2.49007
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:25:03) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
3.03148
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:25:04) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
3.0321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:25:06) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
2.30652
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:25:06) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
2.41362
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:06) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:07) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:25:10) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
3.1869
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:25:10) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
2.99094
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:25:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
1.03075
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1795/1595/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:25:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
2.83759
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:25:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
2.60109
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    nota = nota + nota[i]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:19) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + nota[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:59) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:29:00) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- EXECUTION TIME:
0.474298
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 9, in <module>
    if(v==min(v)):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:04) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:24) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:21) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:32:55) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))
-- EXECUTION TIME:
0.5124
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
14.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:00) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:13) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
	
print(round(nota-mn/size(v)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:51) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-man)/size(v))
print(round(nf)
-- ERROR:
File "XXXX", line 14
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:04) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-man)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:35:09) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-man)/size(v))
print(round(nf))
-- EXECUTION TIME:
0.367444
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 12, in <module>
    nf=((nota-man)/size(v))
NameError: name 'man' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-man)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:35:44) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
0.59513
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:35:48) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
0.503645
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:48) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:35:52) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
1.68447
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:35:53) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
0.671691
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:35:53) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.18102
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:35:53) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.68969
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:35:55) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
3.50146
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:35:57) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.41031
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
2.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:01) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.70305
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:02) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.89563
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:02) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
3.00488
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:02) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
3.9296
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:03) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.13145
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
3.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:07) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.73626
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:10) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.8303
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:10) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.34492
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.64258
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:11) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.91401
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:12) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:12) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:12) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:12) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:12) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
3.93787
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:14) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.81072
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
vetor:3.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:15) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.29426
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
vetor:3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
vetor:2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:15) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- EXECUTION TIME:
2.24771
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
vetor:1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
vetor:3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
vetor:2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:37:15) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v)-mn)
print(round(nf))
-- EXECUTION TIME:
0.470364
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
2.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
-0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:16) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v)-mn)
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:38:09) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v)-1)
print(round(nf))
-- EXECUTION TIME:
0.437191
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
0.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
2.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:39:16) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/(size(v)-1))
print(round(nf))
-- EXECUTION TIME:
0.573812
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:37) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/(size(v)-1))
print(round(nf))
print(mn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:07) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/(size(v)-1))
print(round(nf))
print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:24) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:41) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota-mn)/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:26) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=(nota-mn/size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:36) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=(nota-mn)/(size(v))
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:45:02) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=nota-mn/size(v)
print(round(nf))
-- EXECUTION TIME:
0.334729
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
14.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:45:03) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=nota-mn/size(v)
print(round(nf))
-- EXECUTION TIME:
0.535521
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
14.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:18) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf = nota/size(v)
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:30) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf = nota-mn/size(v)-1
print(round(nf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:46:30) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf = nota-mn/size(v)-1
print(round(nf))
-- EXECUTION TIME:
0.530754
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
3.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
vetor:6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:42) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=nota/size(v)
print(round(nf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:25) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=(nota-mn/size(v))
print(round(nf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:07) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=(nota)/size(v)
print(round(nf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:56) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=(nota)-(mn)/(size(v))-1
print(round(nf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:50:25) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota)-(mn))/(size(v))-1
print(round(nf,2))
-- EXECUTION TIME:
0.53897
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
0.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.6
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:36) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota)-(mn))/((size(v))-1)
print(round(nf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:50:39) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota)-(mn))/((size(v))-1)
print(round(nf,2))
-- EXECUTION TIME:
0.602717
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:50:40) 
-- CODE:
from numpy import * 
v=array(eval(input("vetor:")))
i=0
nota=0
mn=0
while(i<size(v)):
	if(v[i]>=0 and v[i]<=10):
	   nota = nota + v[i]
	if(v[i]==min(v)):
		mn=v[i]
	i = i+1
nf=((nota)-(mn))/((size(v))-1)
print(round(nf,2))
-- EXECUTION TIME:
0.516182
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
